#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
è¿ç§»æŠ¥å‘Šå’Œç»Ÿè®¡å·¥å…·
ç”ŸæˆJProtobufåˆ°æ ‡å‡†Protobufè¿ç§»çš„ç»¼åˆæŠ¥å‘Š
"""

import sqlite3
from pathlib import Path
from typing import Dict, List
from datetime import datetime

class MigrationReportGenerator:
    """è¿ç§»æŠ¥å‘Šç”Ÿæˆå™¨"""
    
    def __init__(self, db_path: str):
        self.db_path = db_path
        self.project_root = Path('/home/pix/dev/code/java/DnfGameServer')
        self.reports_dir = self.project_root / 'devdoc' / 'protobuf' / 'reports' / 'docs'
        self.reports_dir.mkdir(parents=True, exist_ok=True)
    
    def _connect(self):
        """è¿æ¥æ•°æ®åº“"""
        return sqlite3.connect(self.db_path)
    
    def generate_overall_report(self) -> str:
        """ç”Ÿæˆæ•´ä½“è¿ç§»æŠ¥å‘Š"""
        conn = self._connect()
        cursor = conn.cursor()
        
        # åŸºæœ¬ç»Ÿè®¡
        cursor.execute('SELECT COUNT(*) FROM jprotobuf_messages')
        total_jprotobuf = cursor.fetchone()[0]
        
        cursor.execute('SELECT COUNT(*) FROM proto_messages')
        total_proto = cursor.fetchone()[0]
        
        cursor.execute('SELECT COUNT(DISTINCT jprotobuf_message_id) FROM message_mappings')
        mapped_count = cursor.fetchone()[0]
        
        cursor.execute('''
            SELECT COUNT(DISTINCT jprotobuf_message_id) 
            FROM migration_records 
            WHERE migration_status = 'migrated'
        ''')
        migrated_count = cursor.fetchone()[0]
        
        cursor.execute('SELECT COUNT(*) FROM migration_batches')
        total_batches = cursor.fetchone()[0]
        
        cursor.execute('''
            SELECT COUNT(*) FROM migration_batches 
            WHERE status = 'completed'
        ''')
        completed_batches = cursor.fetchone()[0]
        
        # æŒ‰ç±»å‹ç»Ÿè®¡
        cursor.execute('''
            SELECT message_type, COUNT(*) 
            FROM jprotobuf_messages 
            GROUP BY message_type
            ORDER BY COUNT(*) DESC
        ''')
        
        type_stats = []
        for row in cursor.fetchall():
            msg_type = row[0]
            total = row[1]
            
            cursor.execute('''
                SELECT COUNT(DISTINCT jm.id)
                FROM jprotobuf_messages jm
                LEFT JOIN message_mappings mm ON jm.id = mm.jprotobuf_message_id
                WHERE jm.message_type = ? AND mm.id IS NOT NULL
            ''', (msg_type,))
            
            mapped = cursor.fetchone()[0]
            
            cursor.execute('''
                SELECT COUNT(DISTINCT jm.id)
                FROM jprotobuf_messages jm
                LEFT JOIN migration_records mr ON jm.id = mr.jprotobuf_message_id
                WHERE jm.message_type = ? AND mr.migration_status = 'migrated'
            ''', (msg_type,))
            
            migrated = cursor.fetchone()[0]
            
            type_stats.append({
                'type': msg_type,
                'total': total,
                'mapped': mapped,
                'migrated': migrated,
                'mapping_rate': round(mapped / total * 100, 2) if total > 0 else 0,
                'migration_rate': round(migrated / total * 100, 2) if total > 0 else 0
            })
        
        # æ‰¹æ¬¡ç»Ÿè®¡
        cursor.execute('''
            SELECT batch_number, batch_name, status, jprotobuf_count, proto_count
            FROM migration_batches
            ORDER BY batch_number
        ''')
        
        batch_stats = []
        for row in cursor.fetchall():
            batch_stats.append({
                'batch_number': row[0],
                'batch_name': row[1],
                'status': row[2],
                'jprotobuf_count': row[3],
                'proto_count': row[4]
            })
        
        conn.close()
        
        # ç”ŸæˆæŠ¥å‘Š
        report = f"""# JProtobufåˆ°æ ‡å‡†Protobufè¿ç§»æŠ¥å‘Š

## ğŸ“Š æ•´ä½“æ¦‚å†µ

| æŒ‡æ ‡ | æ•°å€¼ |
| :--- | :--- |
| **JProtobufæ¶ˆæ¯æ€»æ•°** | {total_jprotobuf} |
| **æ ‡å‡†Protobufæ¶ˆæ¯æ€»æ•°** | {total_proto} |
| **å·²æ˜ å°„æ¶ˆæ¯æ•°** | {mapped_count} ({round(mapped_count / total_jprotobuf * 100, 2) if total_jprotobuf > 0 else 0}%) |
| **å·²è¿ç§»æ¶ˆæ¯æ•°** | {migrated_count} ({round(migrated_count / total_jprotobuf * 100, 2) if total_jprotobuf > 0 else 0}%) |
| **æ‰¹æ¬¡æ€»æ•°** | {total_batches} |
| **å·²å®Œæˆæ‰¹æ¬¡** | {completed_batches} ({round(completed_batches / total_batches * 100, 2) if total_batches > 0 else 0}%) |

## ğŸ“ˆ æŒ‰ç±»å‹ç»Ÿè®¡

| ç±»å‹ | æ€»æ•° | å·²æ˜ å°„ | å·²è¿ç§» | æ˜ å°„ç‡ | è¿ç§»ç‡ |
| :--- | :--- | :--- | :--- | :--- | :--- |
"""
        
        for stat in type_stats:
            report += f"| {stat['type']} | {stat['total']} | {stat['mapped']} | {stat['migrated']} | {stat['mapping_rate']}% | {stat['migration_rate']}% |\n"
        
        report += "\n## ğŸ“¦ æ‰¹æ¬¡ç»Ÿè®¡\n\n"
        
        for batch in batch_stats:
            status_icon = "âœ…" if batch['status'] == 'completed' else "â³" if batch['status'] == 'in_progress' else "âŒ"
            report += f"### æ‰¹æ¬¡ {batch['batch_number']}: {batch['batch_name']} {status_icon}\n\n"
            report += f"- çŠ¶æ€: {batch['status']}\n"
            report += f"- JProtobufæ¶ˆæ¯æ•°: {batch['jprotobuf_count']}\n"
            report += f"- æ ‡å‡†Protobufæ¶ˆæ¯æ•°: {batch['proto_count']}\n\n"
        
        report += f"\n---\n\n*æŠ¥å‘Šç”Ÿæˆæ—¶é—´: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}*\n"
        
        return report
    
    def generate_mapping_report(self) -> str:
        """ç”Ÿæˆæ˜ å°„å…³ç³»æŠ¥å‘Š"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT 
                jm.message_name as jprotobuf_name,
                jm.message_type as jprotobuf_type,
                pm.message_name as proto_name,
                pm.file_path as proto_path,
                mm.mapping_type,
                mm.mapping_confidence,
                mm.is_verified
            FROM message_mappings mm
            LEFT JOIN jprotobuf_messages jm ON mm.jprotobuf_message_id = jm.id
            LEFT JOIN proto_messages pm ON mm.proto_message_id = pm.id
            ORDER BY jm.message_name
        ''')
        
        mappings = []
        for row in cursor.fetchall():
            mappings.append({
                'jprotobuf_name': row[0],
                'jprotobuf_type': row[1],
                'proto_name': row[2],
                'proto_path': row[3],
                'mapping_type': row[4],
                'mapping_confidence': row[5],
                'is_verified': row[6]
            })
        
        conn.close()
        
        report = """# æ¶ˆæ¯æ˜ å°„å…³ç³»æŠ¥å‘Š

## ğŸ“‹ æ˜ å°„åˆ—è¡¨

| JProtobufæ¶ˆæ¯ | ç±»å‹ | æ ‡å‡†Protobufæ¶ˆæ¯ | æ–‡ä»¶ | æ˜ å°„ç±»å‹ | ç½®ä¿¡åº¦ | å·²éªŒè¯ |
| :--- | :--- | :--- | :--- | :--- | :--- | :--- |
"""
        
        for mapping in mappings:
            proto_file = Path(mapping['proto_path']).name if mapping['proto_path'] else 'N/A'
            verified = "âœ…" if mapping['is_verified'] else "âŒ"
            report += f"| {mapping['jprotobuf_name']} | {mapping['jprotobuf_type']} | {mapping['proto_name']} | {proto_file} | {mapping['mapping_type']} | {mapping['mapping_confidence']} | {verified} |\n"
        
        report += f"\n---\n\n*æŠ¥å‘Šç”Ÿæˆæ—¶é—´: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}*\n"
        
        return report
    
    def generate_batch_report(self, batch_number: int) -> str:
        """ç”Ÿæˆæ‰¹æ¬¡æŠ¥å‘Š"""
        conn = self._connect()
        cursor = conn.cursor()
        
        cursor.execute('''
            SELECT batch_number, batch_name, description, status,
                   start_time, end_time, jprotobuf_count, proto_count
            FROM migration_batches
            WHERE batch_number = ?
        ''', (batch_number,))
        
        result = cursor.fetchone()
        if not result:
            return f"# æ‰¹æ¬¡ {batch_number} æŠ¥å‘Š\n\nâŒ æœªæ‰¾åˆ°è¯¥æ‰¹æ¬¡\n"
        
        batch_id = result[0]
        
        cursor.execute('''
            SELECT 
                jm.message_name as jprotobuf_name,
                jm.message_type as jprotobuf_type,
                pm.message_name as proto_name,
                mr.migration_status
            FROM migration_records mr
            LEFT JOIN jprotobuf_messages jm ON mr.jprotobuf_message_id = jm.id
            LEFT JOIN proto_messages pm ON mr.proto_message_id = pm.id
            WHERE mr.batch_id = ?
            ORDER BY jm.message_name
        ''', (batch_id,))
        
        messages = []
        for row in cursor.fetchall():
            messages.append({
                'jprotobuf_name': row[0],
                'jprotobuf_type': row[1],
                'proto_name': row[2],
                'migration_status': row[3]
            })
        
        conn.close()
        
        status_icon = "âœ…" if result[3] == 'completed' else "â³" if result[3] == 'in_progress' else "âŒ"
        
        report = f"""# æ‰¹æ¬¡ {batch_number} è¿ç§»æŠ¥å‘Š

## ğŸ“‹ æ‰¹æ¬¡ä¿¡æ¯

| å±æ€§ | å€¼ |
| :--- | :--- |
| **æ‰¹æ¬¡ç¼–å·** | {result[0]} |
| **æ‰¹æ¬¡åç§°** | {result[1]} |
| **æè¿°** | {result[2] or 'N/A'} |
| **çŠ¶æ€** | {result[3]} {status_icon} |
| **å¼€å§‹æ—¶é—´** | {result[4]} |
| **ç»“æŸæ—¶é—´** | {result[5]} |
| **JProtobufæ¶ˆæ¯æ•°** | {result[6]} |
| **æ ‡å‡†Protobufæ¶ˆæ¯æ•°** | {result[7]} |

## ğŸ“¦ æ¶ˆæ¯åˆ—è¡¨

| JProtobufæ¶ˆæ¯ | ç±»å‹ | æ ‡å‡†Protobufæ¶ˆæ¯ | çŠ¶æ€ |
| :--- | :--- | :--- | :--- |
"""
        
        for msg in messages:
            status_icon = "âœ…" if msg['migration_status'] == 'migrated' else "â³"
            report += f"| {msg['jprotobuf_name']} | {msg['jprotobuf_type']} | {msg['proto_name'] or 'N/A'} | {msg['migration_status']} {status_icon} |\n"
        
        report += f"\n---\n\n*æŠ¥å‘Šç”Ÿæˆæ—¶é—´: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}*\n"
        
        return report
    
    def save_report(self, report: str, filename: str):
        """ä¿å­˜æŠ¥å‘Šåˆ°æ–‡ä»¶"""
        report_path = self.reports_dir / filename
        with open(report_path, 'w', encoding='utf-8') as f:
            f.write(report)
        print(f"âœ… æŠ¥å‘Šå·²ä¿å­˜: {report_path}")
    
    def generate_all_reports(self):
        """ç”Ÿæˆæ‰€æœ‰æŠ¥å‘Š"""
        print("ğŸ“Š ç”Ÿæˆè¿ç§»æŠ¥å‘Š...")
        print()
        
        # æ•´ä½“æŠ¥å‘Š
        overall_report = self.generate_overall_report()
        self.save_report(overall_report, 'MIGRATION_OVERALL_REPORT.md')
        
        # æ˜ å°„å…³ç³»æŠ¥å‘Š
        mapping_report = self.generate_mapping_report()
        self.save_report(mapping_report, 'MIGRATION_MAPPING_REPORT.md')
        
        # æ‰¹æ¬¡æŠ¥å‘Š
        conn = self._connect()
        cursor = conn.cursor()
        cursor.execute('SELECT batch_number FROM migration_batches ORDER BY batch_number')
        batch_numbers = [row[0] for row in cursor.fetchall()]
        conn.close()
        
        for batch_number in batch_numbers:
            batch_report = self.generate_batch_report(batch_number)
            self.save_report(batch_report, f'BATCH_{batch_number}_REPORT.md')
        
        print()
        print("âœ… æ‰€æœ‰æŠ¥å‘Šç”Ÿæˆå®Œæˆï¼")
        print()

def main():
    """ä¸»å‡½æ•°"""
    import argparse
    
    parser = argparse.ArgumentParser(description='è¿ç§»æŠ¥å‘Šå’Œç»Ÿè®¡å·¥å…·')
    parser.add_argument('--generate-all', action='store_true', help='ç”Ÿæˆæ‰€æœ‰æŠ¥å‘Š')
    parser.add_argument('--overall', action='store_true', help='ç”Ÿæˆæ•´ä½“æŠ¥å‘Š')
    parser.add_argument('--mapping', action='store_true', help='ç”Ÿæˆæ˜ å°„å…³ç³»æŠ¥å‘Š')
    parser.add_argument('--batch', type=int, help='ç”Ÿæˆæ‰¹æ¬¡æŠ¥å‘Š')
    
    args = parser.parse_args()
    
    db_path = '/home/pix/dev/code/java/DnfGameServer/devdoc/protobuf/reports/data/migration_system.db'
    generator = MigrationReportGenerator(db_path)
    
    if args.generate_all:
        generator.generate_all_reports()
    elif args.overall:
        report = generator.generate_overall_report()
        print(report)
    elif args.mapping:
        report = generator.generate_mapping_report()
        print(report)
    elif args.batch:
        report = generator.generate_batch_report(args.batch)
        print(report)
    else:
        parser.print_help()

if __name__ == '__main__':
    main()
